--- a/projects/01-my-first-app/src/global.css
+++ b/projects/01-my-first-app/src/global.css
@@ -1,4 +1,12 @@
 /**
+ * Tailwind CSS imports
+ * View the full documentation at https://tailwindcss.com
+ */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/**
  * WHAT IS THIS FILE?
  *
  * Globally applied styles. No matter which components are in the page or matching route,
@@ -18,12 +26,21 @@ html {
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 body {
   padding: 0;
   line-height: inherit;
+}
+
+/* Custom tailwind classes */
+.btn {
+  @apply py-2 px-4 rounded;
+}
+
+.btn-primary {
+  @apply bg-blue-600 dark:bg-neutral-600 hover:bg-blue-700 hover:dark:bg-neutral-700 text-white disabled:opacity-50 disabled:cursor-not-allowed;
 }
